--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,23 @@
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+
+}
+
+header nav ul {
+    display: flex;
+    gap: 15px;
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 header {
     background-color: #000;
     color: #fff;
@@ -5,28 +25,25 @@ header {
 }
 
 .wrapper {
-    max-width: 940px;
-    align-items: center;
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 20px;
+
 }
 
 header .wrapper {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-
+    align-items: center;
 }
 
 nav ul {
     display: flex;
-    gap: 20px;
-    list-style: none;
+}
 
-    nav ul li {
-        margin-left: wrap;
-        justify-content: space-between;
-    }
+nav ul li {
+    margin-left: 20px;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 #hero {
@@ -49,32 +66,22 @@ h1 {
     padding: 30px;
 }
 
-#about-me .wrapper {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column: 2 /3;
-
+img {
+    width: 100%;
 }
 
-
-
-#service .wrapper {
-    padding-bottom: 5em;
-
+#about-me {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    align-items: center;
 }
 
 #services {
-    display: flex;
-    max-width: auto;
     background-color: #fafafa;
-    justify-content: center;
-    padding-top: 3em;
-    text-align: center;
-
 }
 
 #services h2 {
-    max-width: auto;
+    width: auto;
     justify-content: center;
     display: flex;
     text-align: center;
@@ -83,7 +90,11 @@ h1 {
 }
 
 
-
+#services .wrapper {
+    display: flex;
+    padding-bottom: 5em;
+    flex-direction: column;
+}
 
 .grid {
     display: grid;
@@ -103,14 +114,13 @@ h1 {
     margin-bottom: 0;
 }
 
-
-
-.grid a:link {
+.btn,
+.btn:visited {
     display: inline-block;
-    margin-top: auto;
-    color: #fff;
     padding: 0.8em 1em;
-    background-color: #000;
+    margin-top: auto;
+    background-color: black;
+    color: #fff;
     text-decoration: none;
     border: 2px solid #414361;
     border-radius: 4px;
@@ -124,10 +134,47 @@ h1 {
     color: #414361;
 }
 
+#work .wrapper {
+    text-align: center;
+}
+
+#work .image {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    align-items: stretch;
+}
+
+
+#work img:nth-child(1) {
+    grid-column: 1 / 4;
+    grid-row: 1 / 2;
+}
+
+#work img:nth-child(2) {
+    grid-column: 4 / 7;
+    grid-row: 1 / 2;
+}
+
+#work img:nth-child(3) {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+}
+
+#work img:nth-child(4) {
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+}
+
+#work img:nth-child(5) {
+    grid-column: 5 / 7;
+    grid-row: 2 / 3;
+}
 
 footer {
     background-color: #000;
     color: #fff;
-    padding: 20px 0;
+    margin-top: 50px;
+    padding: 10px;
     text-align: center;
 }
